--- a/opengabe/opengabe.vcxproj
+++ b/opengabe/opengabe.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="camera.cpp" />
     <ClCompile Include="cube.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="Gizmos.cpp" />
@@ -143,6 +144,7 @@
     <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="camera.h" />
     <ClInclude Include="cube.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="Gizmos.h" />
