implement ability for multiple lights!

--- a/opengabe/opengabe.vcxproj.filters
+++ b/opengabe/opengabe.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="phong.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gl_core_4_4.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="phong.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
