--- a/opengabe/opengabe.vcxproj
+++ b/opengabe/opengabe.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{7EFDF8F2-48A9-4E2B-AC41-61ADB2FC1E4C}</ProjectGuid>
     <RootNamespace>opengabe</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,6 +139,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mesh.cpp" />
     <ClCompile Include="OBJMesh.cpp" />
+    <ClCompile Include="phong.cpp" />
     <ClCompile Include="quad.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -151,6 +152,7 @@
     <ClInclude Include="gl_core_4_4.h" />
     <ClInclude Include="mesh.h" />
     <ClInclude Include="OBJMesh.h" />
+    <ClInclude Include="phong.h" />
     <ClInclude Include="quad.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="Texture.h" />
