--- a/opengabe/opengabe.vcxproj.filters
+++ b/opengabe/opengabe.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="drawable.cpp">
       <Filter>Source Files\scene</Filter>
     </ClCompile>
+    <ClCompile Include="toon.cpp">
+      <Filter>Source Files\shaders</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gl_core_4_4.h">
@@ -112,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="drawable.h">
       <Filter>Header Files\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="toon.h">
+      <Filter>Header Files\shaders</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
