--- a/imgui/imgui.vcxproj
+++ b/imgui/imgui.vcxproj
@@ -18,11 +18,24 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\dependencies\imgui\imgui.cpp" />
+    <ClCompile Include="..\dependencies\imgui\imgui_demo.cpp" />
+    <ClCompile Include="..\dependencies\imgui\imgui_draw.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\dependencies\imgui\imconfig.h" />
+    <ClInclude Include="..\dependencies\imgui\imgui.h" />
+    <ClInclude Include="..\dependencies\imgui\imgui_internal.h" />
+    <ClInclude Include="..\dependencies\imgui\stb_rect_pack.h" />
+    <ClInclude Include="..\dependencies\imgui\stb_textedit.h" />
+    <ClInclude Include="..\dependencies\imgui\stb_truetype.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{C9B6FEBE-A4A8-42F1-B4ED-375868D17614}</ProjectGuid>
     <RootNamespace>imgui</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -125,19 +138,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\aieBootstrap-master\dependencies\imgui\imgui.cpp" />
-    <ClCompile Include="..\..\aieBootstrap-master\dependencies\imgui\imgui_demo.cpp" />
-    <ClCompile Include="..\..\aieBootstrap-master\dependencies\imgui\imgui_draw.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\aieBootstrap-master\dependencies\imgui\imconfig.h" />
-    <ClInclude Include="..\..\aieBootstrap-master\dependencies\imgui\imgui.h" />
-    <ClInclude Include="..\..\aieBootstrap-master\dependencies\imgui\imgui_internal.h" />
-    <ClInclude Include="..\..\aieBootstrap-master\dependencies\imgui\stb_rect_pack.h" />
-    <ClInclude Include="..\..\aieBootstrap-master\dependencies\imgui\stb_textedit.h" />
-    <ClInclude Include="..\..\aieBootstrap-master\dependencies\imgui\stb_truetype.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
