add model selection

--- a/graphics/graphics.vcxproj
+++ b/graphics/graphics.vcxproj
@@ -70,16 +70,16 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(SolutionDir)temp\$(ProjectName)\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)temp\$(ProjectName)\$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)temp\$(ProjectName)\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)temp\$(ProjectName)\$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(SolutionDir)temp\$(ProjectName)\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)temp\$(ProjectName)\$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(SolutionDir)temp\$(ProjectName)\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)temp\$(ProjectName)\$(Platform)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
